# random-mtj

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
code/: calc_Heff.py  calc_Hfl.py  constants.py  draft1.py  init.py  llg_heun.py  main.py
examples/: energy-and-stable-state.ipynb  intermediate_field_recomputation.ipynb  perpendicular-mtj.ipynb  precession.ipynb  random-bin-sequence.ipynb  random-number-generator.ipynb  stt-statistics.ipynb  stt.ipynb  thermal_fluctuations_analysis-Copy1.ipynb  thermal_fluctuations_analysis.ipynb  usage-without-stt.ipynb
examples/streamlit_demos/: main.py  precession.py  sandbox.py  stt-switching.py
mtj/: analysis.py  calc_Heff.py  calc_Hfl.py  calc_Hth.py  calc_torque.py  constants.py  draft1.py  init.py  llg_heun.py  main.py  tmr.py  typing.py
text/: Notes.txt  meeting_27-02.txt
